# sequence_reader

./: .gitignore  CMakeLists.txt  README.md  package.xml
calib/ethz/: left_calib.yaml  right_calib.yaml
calib/kitti/: left_calib.yaml  right_calib.yaml
config/: sequence_reader.rviz
launch/: launch.launch
params/: bahnhoffstrasse.yaml  kitti_sequence_campus.yaml  kitti_sequence_pedestrian.yaml
src/: CMakeLists.txt  ObstaclesFromStereo.cpp  ObstaclesFromStereo.h  main.cpp  params_structs.h
src/sequence_reader/: groundtruthmanager.cpp  groundtruthmanager.h
